--- a/templates/base.html
+++ b/templates/base.html
@@ -4,18 +4,16 @@
 
     <head>
         <meta charset="utf-8" />	
-        <link href="{{STATIC_URL}}css/style.css" rel="stylesheet" type="text/css" title="style.css">
-        {% block head %}{% endblock %}
+       {% block head %}{% endblock %}
     </head>
 
     <body>
-        <div id="inner-page">
+        <div id="container">
             {% block header %}{% endblock %}
-
             {% block body %}{% endblock %}
-
             {% block footer %}{% endblock %}
         </div>
+
     </body>
 
 </html>
