--- a/hmmer/templates/tabs.html
+++ b/hmmer/templates/tabs.html
@@ -5,6 +5,7 @@
 
 <link href="{{ STATIC_URL }}css/upload.css" rel="stylesheet" type="text/css" media="all" />
 
+<script type="text/javascript" src="http://www.google.com/jsapi"></script>
 <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
 <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
  
