--- a/templates/base.html
+++ b/templates/base.html
@@ -3,13 +3,161 @@
 <html>
 
     <head>
-        <meta charset="utf-8" />	
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
+        <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/jquery-ui-1.7.2.custom.css">
+        <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/cake.generic.css">
+        <script type="text/javascript" src="{{ STATIC_URL }}js/prototype.js"></script>
+
+        <script type="text/javascript" src="{{ STATIC_URL }}js/scriptaculous.js"></script>
+        <script type="text/javascript" src="{{ STATIC_URL }}js/builder.js"></script>
+        <script type="text/javascript" src="{{ STATIC_URL }}js/effects.js"></script>
+        <script type="text/javascript" src="{{ STATIC_URL }}js/dragdrop.js"></script>
+        <script type="text/javascript" src="{{ STATIC_URL }}js/controls.js"></script>
+        <script type="text/javascript" src="{{ STATIC_URL }}js/slider.js"></script>
+        <script type="text/javascript" src="{{ STATIC_URL }}js/sound.js"></script>
+
+        <script type="text/javascript" src="{{ STATIC_URL }}js/jquery-1.js"></script>
+
+        <script type="text/javascript" src="{{ STATIC_URL }}js/jquery-ui-1.js"></script>
+
+        <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.js"></script>
+
+
+<script type="text/javascript">
+ jQuery.noConflict();
+	
+	jQuery(function(){			
+
+		// Dialog			
+		jQuery('#dialog').dialog({
+			autoOpen: false,
+			width: 850,
+			modal: true,
+			buttons: {
+				"Ok": function() { 
+					jQuery(this).dialog("close"); 
+				},
+			}
+		});
+		
+		// Dialog Link
+		jQuery('#dialog_link').click(function(){
+			jQuery('#dialog').dialog('open');
+			return false;
+		});
+
+		// Datepicker
+		jQuery('#datepicker').datepicker({
+			inline: true
+		});
+		
+		// Slider
+		jQuery('#slider').slider({
+			range: true,
+			values: [17, 67]
+		});
+		
+		// Progressbar
+		jQuery("#progressbar").progressbar({
+			value: 20 
+		});
+		
+		//hover states on the static widgets
+		jQuery('#dialog_link, ul#icons li').hover(
+			function() { jQuery(this).addClass('ui-state-hover'); }, 
+			function() { jQuery(this).removeClass('ui-state-hover'); }
+		);
+		
+	});
+	
+	jQuery.fn.qtip.styles.mystyle = { // Last part is the name of the style
+			   width: 250,
+			   background: '#A2D959',
+                       color: 'black',
+                       textAlign: 'center',
+                       border: {
+                          width: 1,
+                          radius: 4,
+                          color: '#6DB33F'
+                       },
+                       tip: { // Now an object instead of a string
+                             corner: 'topLeft', // We declare our corner within the object using the corner sub-option
+                             color: '#F99D31',
+                             size: {
+                                x: 20, // Be careful that the x and y values refer to coordinates on screen, not height or width.
+                                y : 8 // Depending on which corner your tooltip is at, x and y could mean either height or width!
+                             }
+                        },
+                       name: 'dark' // Inherit the rest of the attributes from the preset dark style
+            }	
+    </script>
+        <!--Handle Google Analytics Tracking. Configure the parameters in app/config/metarep.php-->
+         <script type="text/javascript">
+              var is_production = true;
+              var dev_test = /(-dev)|(-test)/;
+              var hostname = location.hostname;
+            
+              if(hostname.search(dev_test) != -1) {
+                is_production = false;
+              } // end if(hostname.search(dev_test) != -1)
+            
+              if(is_production) {
+                var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+                document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+              } // end if(is_production)
+        </script>
+
+        <script src="{{ STATIC_URL }}js/ga.js" type="text/javascript"></script>		
+        <script type="text/javascript">
+              if(is_production) {
+                try {
+                  var pageTracker = _gat._getTracker("UA-9809410-3");
+                  pageTracker._setDomainName(".jcvi.org");
+                  pageTracker._trackPageview();
+                } catch(err) {}
+              } // end if(is_production)  
+        </script>   
+            
+              
+        <style type="text/css">
+            /*demo page css*/	
+            .demoHeaders { margin-top: 2em; }
+            #dialog_link {padding: .4em 1em .4em 20px;text-decoration: none;position: relative;}
+            #dialog_link span.ui-icon {margin: 0 5px 0 0;position: absolute;left: .2em;top: 50%;margin-top: -8px;}
+            ul#icons {margin: 0; padding: 0;}
+            ul#icons li {margin: 2px; position: relative; padding: 4px 0; cursor: pointer; float: left;  list-style: none;}
+            ul#icons span.ui-icon {float: left; margin: 0 4px;}
+        </style>
+
+
        {% block head %}{% endblock %}
     </head>
 
     <body>
         <div id="container">
-            {% block header %}{% endblock %}
+            <div id="header">
+                <h1></h1>			
+                {% block header %}{% endblock %}
+            </div>	
+            <div id="header-url-panel">
+                <ul>
+                    <li>website <span style="color: #00A4E4;"><a href="#">http://under.construction</a></span></li>
+                    <li>source code <span style="color: #00A4E4;"><a href="#">http://under.construction</a></span></li>
+                    <!--     <li>blog <span style="color: #00A4E4;"><a href="http://blogs.jcvi.org/tag/metarep">http://blogs.jcvi.org/tag/metarep</a></span></li>
+                    <li>contact <span style="color: #00A4E4;"><a href="mailto:metarep-support@jcvi.org">metarep-support@jcvi.org</a></span></li> --!>
+                </ul>	
+            </div>		
+
+            <ul id="menu">			
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Search</a></li>
+
+
+                <li></li>
+                <li><a href="#">Documentation</a> </li>
+            </ul>	
+
             {% block body %}{% endblock %}
             {% block footer %}{% endblock %}
         </div>
