--- a/templates/base.html
+++ b/templates/base.html
@@ -22,6 +22,7 @@
         <script type="text/javascript" src="{{ STATIC_URL }}js/jquery-ui-1.js"></script>
 
         <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.js"></script>
+        <script type="text/javascript" src="http://www.google.com/jsapi"></script>
 
 
 <script type="text/javascript">
