--- a/hmmer/templates/chart.html
+++ b/hmmer/templates/chart.html
@@ -1,54 +1,29 @@
-{% block head %}
-<!--Load the AJAX API-->
-<script type="text/javascript" src="https://www.google.com/jsapi"></script>
+{% extends "tab_base.html" %}
+{% load custom_filters %}
+
+{% block body %}
+
+<div id="chart_div_{{ site }}"></div>
+
+<script type="text/javascript" src="http://www.google.com/jsapi"></script>
 <script type="text/javascript">
 
 // Load the Visualization API and the piechart package.
-google.load('visualization', '1.0', {'packages':['corechart']});
+google.load('visualization', '1.0', {'packages':['corechart'],"callback":drawChart});
 
 // Set a callback to run when the Google Visualization API is loaded.
-google.setOnLoadCallback(drawAll);
+//google.setOnLoadCallback(drawChart);
 
-// Callback that creates and populates a data table,
-// instantiates the pie chart, passes in the data and
-// draws it.
-function drawAll() {
-    drawChartALL();
-    drawChartDETAILED();
-}
-
-function drawChartALL() {
+function drawChart() {
 
     // Create the data table.
     var data = new google.visualization.DataTable();
     data.addColumn('string', 'clade'); 
     data.addColumn('number', 'amount'); 
     data.addRows([
-    {% for key, value in ALL_dict.items %} 
-        ['{{ key }}',{{ value }}],
-    {% endfor %}
-            ]);
-
-    // Set chart options
-    var options = {'title':'ALL_counts',
-        'width':400,
-        'height':300};
-
-    // Instantiate and draw our chart, passing in some options.
-    var chart = new google.visualization.PieChart(document.getElementById('chart_div_ALL'));
-    chart.draw(data, options);
-}
-
-function drawChartDETAILED() {
-
-    // Create the data table.
-    var data = new google.visualization.DataTable();
-    data.addColumn('string', 'clade'); 
-    data.addColumn('number', 'amount'); 
-    data.addRows([
-    {% for key, value in DETAILED_dict.items %} 
-        ['{{ key }}',{{ value }}],
-    {% endfor %}
+            {% for key, value in detailed_counts.items %} 
+            ['{{ key }}',{{ value }}],
+            {% endfor %}
             ]);
 
     // Set chart options
@@ -57,21 +32,9 @@ function drawChartDETAILED() {
         'height':300};
 
     // Instantiate and draw our chart, passing in some options.
-    var chart = new google.visualization.PieChart(document.getElementById('chart_div_DETAILED'));
+    var chart = new google.visualization.PieChart(document.getElementById('chart_div_{{ site }}'));
     chart.draw(data, options);
 }
 </script>
-{% endblock %}
-{% block body %}
-<!--Div that will hold the pie chart-->
-<ul>
-{% for key, value in dictionary.items %} 
-  <li>{{key}} - {{value}}</li>
-{% endfor %}
-</ul>
 
-<div id="chart_div_ALL"></div>
-<div id="chart_div_DETAILED"></div>
 {% endblock %}
-                                                                                                                                                                                                                                                                    </body>
-
