--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
 
         <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/jquery-ui-1.7.2.custom.css">
         <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/cake.generic.css">
-        <script type="text/javascript" src="{{ STATIC_URL }}js/prototype.js"></script>
+        <script type="text/javascript" src="{{ STATIC_URL }}js/prototype.js"></script> 
 
         <script type="text/javascript" src="{{ STATIC_URL }}js/scriptaculous.js"></script>
         <script type="text/javascript" src="{{ STATIC_URL }}js/builder.js"></script>
@@ -15,12 +15,10 @@
         <script type="text/javascript" src="{{ STATIC_URL }}js/dragdrop.js"></script>
         <script type="text/javascript" src="{{ STATIC_URL }}js/controls.js"></script>
         <script type="text/javascript" src="{{ STATIC_URL }}js/slider.js"></script>
-        <script type="text/javascript" src="{{ STATIC_URL }}js/sound.js"></script>
+        <script type="text/javascript" src="{{ STATIC_URL }}js/sound.js"></script> 
 
         <script type="text/javascript" src="{{ STATIC_URL }}js/jquery-1.js"></script>
-
         <script type="text/javascript" src="{{ STATIC_URL }}js/jquery-ui-1.js"></script>
-
         <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.js"></script>
         <script type="text/javascript" src="http://www.google.com/jsapi"></script>
 
@@ -110,6 +108,7 @@
         </script>
 
         <script src="{{ STATIC_URL }}js/ga.js" type="text/javascript"></script>		
+
         <script type="text/javascript">
               if(is_production) {
                 try {
@@ -145,16 +144,14 @@
                 <ul>
                     <li>website <span style="color: #00A4E4;"><a href="#">http://under.construction</a></span></li>
                     <li>source code <span style="color: #00A4E4;"><a href="#">http://under.construction</a></span></li>
-                    <!--     <li>blog <span style="color: #00A4E4;"><a href="http://blogs.jcvi.org/tag/metarep">http://blogs.jcvi.org/tag/metarep</a></span></li>
-                    <li>contact <span style="color: #00A4E4;"><a href="mailto:metarep-support@jcvi.org">metarep-support@jcvi.org</a></span></li> --!>
+                    <li>blog <span style="color: #00A4E4;"><a href="#">http://under.construction</a></span></li>
+                    <li>contact <span style="color: #00A4E4;"><a href="#">http://under.construction</a></span></li>
                 </ul>	
             </div>		
 
             <ul id="menu">			
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Search</a></li>
-
-
                 <li></li>
                 <li><a href="#">Documentation</a> </li>
             </ul>	
