--- a/templates/base.html
+++ b/templates/base.html
@@ -5,21 +5,11 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-        <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/jquery-ui-1.7.2.custom.css">
+        <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}js/jquery-ui-1.10.3/themes/smoothness/jquery-ui-1.10.3.custom.css">
         <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/cake.generic.css">
-        <script type="text/javascript" src="{{ STATIC_URL }}js/prototype.js"></script> 
-
-        <script type="text/javascript" src="{{ STATIC_URL }}js/scriptaculous.js"></script>
-        <script type="text/javascript" src="{{ STATIC_URL }}js/builder.js"></script>
-        <script type="text/javascript" src="{{ STATIC_URL }}js/effects.js"></script>
-        <script type="text/javascript" src="{{ STATIC_URL }}js/dragdrop.js"></script>
-        <script type="text/javascript" src="{{ STATIC_URL }}js/controls.js"></script>
-        <script type="text/javascript" src="{{ STATIC_URL }}js/slider.js"></script>
-        <script type="text/javascript" src="{{ STATIC_URL }}js/sound.js"></script> 
-
-        <script type="text/javascript" src="{{ STATIC_URL }}js/jquery-1.js"></script>
-        <script type="text/javascript" src="{{ STATIC_URL }}js/jquery-ui-1.js"></script>
-        <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.js"></script>
+        
+        <script type="text/javascript" src="{{ STATIC_URL }}js/jquery-ui-1.10.3/jquery-1.9.1.js"></script>
+        <script type="text/javascript" src="{{ STATIC_URL }}js/jquery-ui-1.10.3/ui/jquery-ui.js"></script>
         <script type="text/javascript" src="http://www.google.com/jsapi"></script>
 
 
