removed tab pages tags

--- a/hmmer/templates/main.html
+++ b/hmmer/templates/main.html
@@ -27,6 +27,10 @@
                         <li><a href="{% url 'clades' id %}">Clades</a></li>
 
                         <li><a href="{% url 'blast' id %}">Subtypes</a></li>
+
+                        <li><a href="{% url 'multiples' id %}">Resolved Multiples</a></li>
+
+                        <li><a href="{% url 'tree' id %}">Placement Tree</a></li>
    
                     </ul>
 
@@ -38,8 +42,9 @@
                 <script type="text/javascript">
                     $(function() {
                         $("#view-tabs").tabs({
+                            cache:false,
                             spinner: '<img src="{{ STATIC_URL }}img/ajax.gif"/>',
-                            show: { effect: "fadeIn",duration:1000 } 
+                            show: { effect: "fadeIn",duration:800 } 
                             });
                     });
                 </script>		
